<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_graund">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo_pastry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"

        android:fontFamily="@font/sans_fa_name_bold"
        android:text="@string/info_user"
        android:textColor="@color/color_text_black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView11" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/back_user_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_name"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_calender">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_code"
            android:layout_width="match_parent"

            android:layout_height="60dp"
            android:background="@drawable/back_edit_text"
            android:editable="false"
            android:fontFamily="@font/sans_fa_name_regular"
            android:hint="کد ملی"
            android:textSize="21sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_number"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/back_edit_text"
            android:editable="false"
            android:fontFamily="@font/sans_fa_name_regular"
            android:hint="نام و نام خانوادگی"
            android:textSize="21sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_calender"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_code">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_calender"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/back_edit_text"
            android:editable="false"
            android:fontFamily="@font/sans_fa_name_regular"
            android:hint="@string/birth_day"
            android:textSize="21sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_number"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/back_edit_text"
            android:editable="false"
            android:fontFamily="@font/sans_fa_name_regular"
            android:hint="@string/number_phone"
            android:textSize="21sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/back_edit_text"
            android:editable="false"
            android:fontFamily="@font/sans_fa_name_regular"
            android:hint="@string/email"
            android:textSize="21sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_gens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/sans_fa_name_bold"
        android:text="@string/gens"
        android:textColor="@color/color_text_black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_email" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/txt_gens"
        app:layout_constraintEnd_toStartOf="@+id/txt_gens"
        app:layout_constraintTop_toTopOf="@+id/txt_gens">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sans_fa_name_regular"
            android:layoutDirection="rtl"
            android:text="@string/man"
            android:textColor="@color/color_text_black"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/sans_fa_name_regular"
            android:layoutDirection="rtl"
            android:text="@string/woman"
            android:textColor="@color/color_text_black"
            android:textSize="25sp" />

    </RadioGroup>

    <ImageView
        android:id="@+id/name_editable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_edit"
        android:translationX="10dp"
        android:translationY="-8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_number"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout_number"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout_number" />

    <ImageView
        android:id="@+id/email_editable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_edit"
        android:translationX="10dp"
        android:translationY="-8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_email"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout_email"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout_email" />

    <ImageView
        android:id="@+id/number_editable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_edit"
        android:translationX="10dp"
        android:translationY="-8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_code"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout_code"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout_code" />

    <ImageView
        android:id="@+id/code_editable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_edit"
        android:translationX="10dp"
        android:translationY="-8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_name"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout_name"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout_name" />

    <ImageView
        android:id="@+id/calender_editable"

        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_calender"
        android:translationX="10dp"
        android:translationY="-8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_calender"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout_calender"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout_calender" />


</androidx.constraintlayout.widget.ConstraintLayout>