<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewProfile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:id="@+id/view_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/back_item_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewMain"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/cakes"
        android:src="@drawable/ic_home"
        app:layout_constraintBottom_toBottomOf="@+id/viewCakes"
        app:layout_constraintEnd_toEndOf="@+id/view_home"
        app:layout_constraintStart_toStartOf="@+id/view_home"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <View
        android:id="@+id/viewMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view_home"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view_shopping"
        app:layout_constraintTop_toTopOf="@+id/view" />




    <View
        android:id="@+id/viewCakes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view_shopping"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewProfile"
        app:layout_constraintTop_toTopOf="@+id/view" />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/cakes"
        android:src="@drawable/ic_cakes"
        app:layout_constraintBottom_toBottomOf="@+id/viewCakes"
        app:layout_constraintEnd_toEndOf="@+id/viewCakes"
        app:layout_constraintStart_toStartOf="@+id/viewCakes"
        app:layout_constraintTop_toTopOf="@+id/viewCakes" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/cakes"
        android:src="@drawable/ic_cakes_main"
        app:layout_constraintBottom_toBottomOf="@+id/viewCakes"
        app:layout_constraintEnd_toEndOf="@+id/viewMain"
        app:layout_constraintStart_toStartOf="@+id/viewMain"
        app:layout_constraintTop_toTopOf="@+id/viewCakes" />


    <View
        android:id="@+id/viewProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewCakes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />


    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/user"
        android:src="@drawable/ic_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/viewProfile"
        app:layout_constraintStart_toStartOf="@+id/viewProfile"
        app:layout_constraintTop_toTopOf="@+id/viewProfile" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/top_of_nav"
        app:layout_constraintBottom_toTopOf="@+id/viewMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/view_shopping"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/polygon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewMain"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewCakes"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/sabad_kharid"
        android:src="@drawable/ic_basket"
        app:layout_constraintBottom_toBottomOf="@+id/view_shopping"
        app:layout_constraintEnd_toEndOf="@+id/view_shopping"
        app:layout_constraintStart_toStartOf="@+id/view_shopping"
        app:layout_constraintTop_toTopOf="@+id/view_shopping" />

    <ImageView
        android:id="@+id/top_of_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/top_of_navigation"
        app:layout_constraintBottom_toTopOf="@+id/view_home"
        app:layout_constraintEnd_toEndOf="@+id/view_home"
        app:layout_constraintStart_toStartOf="@+id/view_home" />

    <ImageView
        android:id="@+id/top_of_cakes"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/top_of_navigation"
        app:layout_constraintBottom_toTopOf="@+id/viewCakes"
        app:layout_constraintEnd_toEndOf="@+id/viewCakes"
        app:layout_constraintStart_toStartOf="@+id/viewCakes" />


    <ImageView
        android:id="@+id/top_of_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/top_of_navigation"
        app:layout_constraintBottom_toTopOf="@+id/viewMain"
        app:layout_constraintEnd_toEndOf="@+id/viewMain"
        app:layout_constraintStart_toStartOf="@+id/viewMain" />

    <ImageView
        android:id="@+id/top_of_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/top_of_navigation"
        app:layout_constraintBottom_toTopOf="@+id/viewProfile"
        app:layout_constraintEnd_toEndOf="@+id/viewProfile"
        app:layout_constraintStart_toStartOf="@+id/viewProfile" />


</androidx.constraintlayout.widget.ConstraintLayout>